force-app/main/default/objects/Discharge__c/Discharge__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Discharge.</description>
    <label>Discharge</label>
    <nameField>
        <displayFormat>DIS-{00000}</displayFormat>
        <label>Discharge Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discharges</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>