force-app/main/default/objects/Discharge__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Discharges</relationshipLabel>
    <relationshipName>Discharges</relationshipName>
    <type>Lookup</type>
</CustomField>