force-app/main/default/objects/Discharge__c/fields/Discharge_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Notes__c</fullName>
    <label>Discharge Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>