force-app/main/default/objects/Discharge__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Approved Discharges</relationshipLabel>
    <relationshipName>Approved_Discharges</relationshipName>
    <type>Lookup</type>
</CustomField>